--- a/src/scss/z-index.scss
+++ b/src/scss/z-index.scss
@@ -3,3 +3,4 @@ $z-index-scene: $z-index-header + 1;
 $z-index-offcanvas-menu: $z-index-scene + 1;
 $z-index-overlay: $z-index-offcanvas-menu + 1;
 $z-index-modal: $z-index-overlay + 1;
+$z-index-spotify-popup: $z-index-scene + 1;
