--- a/src/components/Tetragon.astro
+++ b/src/components/Tetragon.astro
@@ -1,6 +1,12 @@
 ---
 ---
 
+<svg style="display:none;">
+  <symbol id="polygon" viewBox="0 0 800 692.82032">
+    <polygon points="6,690.82032 794,690.82032 400,6" stroke-width="8"></polygon>
+  </symbol>
+</svg>
+
 <div class="scene">
   <div class="tetragon">
     <svg class="tetragon__surface tetragon__surface--bottom"><use xlink:href="#polygon"></use></svg>
