--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,8 @@ import SpotifyPoster from '../components/SpotifyPoster.astro';
         <div class="spotify-grid__link">
           <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" class="link">Listen to Tedra on Spotify</a>
         </div>
-        <div class="spotify-popup">
-          <div class="js-spotify-popup"></div>
+        <div class="spotify-popup js-spotify-popup">
+          <div class="js-spotify-popup-target"></div>
         </div>
       </div>
     </div>
