--- a/src/scss/spotify-popup.scss
+++ b/src/scss/spotify-popup.scss
@@ -4,13 +4,20 @@
   margin: 0 auto;
   bottom: 15px;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(100%);
+  opacity: 0;
   max-width: calc(100% - 30px);
   width: 500px;
   height: 80px;
+  transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
 
   > iframe {
     width: 100%;
     height: 100%;
   }
+}
+
+.spotify-popup--active {
+  transform: translateX(-50%) translateY(0);
+  opacity: 1;
 }
